# wgpu-obj-viewer

./: Cargo.toml  Makefile.toml  README.md  build.rs  index.html
src/: camera.rs  challenge.wgsl  lib.rs  main.rs  model.rs  renderer.rs  resource.rs  shader.wgsl  texture.rs  vertex.rs
www/: index.html  index.js  package-lock.json  package.json
